--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
     <title>The Booleaner</title>
 </head>
 <body>
@@ -15,9 +15,15 @@
 
         <!-- titolo -->
         <section class="title">
-            <h1 class="main-title">Internet deve essere al servizion del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
-            <h2 class="main-subtitle">Scritto da <a href="">The Booleaners</a></h2>
-            <h3 class="date">il 10/10/2020</h3>
+            <h1 class="main-title">
+                Internet deve essere al servizion del "bene pubblico": il manifesto di Tim Berners-Lee
+            </h1>
+            <h2 class="main-subtitle">
+                Scritto da <a href="">The Booleaners</a>
+            </h2>
+            <h2 class="date">
+                il 10/10/2020
+            </h2>
         </section>
 
         <!-- immagini articolo -->
@@ -97,11 +103,13 @@
         </figure>
 
         <figure class="footer-img">
+
             <img src="./img/graph.jpg" alt="">
             <figcaption>
                 Lorem ipsum dolor
             </figcaption>
-    </figure>
+
+        </figure>
 
     </footer>
 
